--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,25 @@ pydantic-settings = "^2.1.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.ruff]
+line-length = 120
+show-fixes = true
+src = ["app"]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "C",  # flake8-comprehensions
+    "B",  # flake8-bugbear
+    "UP",  # pyupgrade
+]
+
+
+#[tool.ruff.per-file-ignores]
+
+
+[tool.pytest.ini_options]
+filterwarnings = ["ignore::DeprecationWarning"]
