--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ uvicorn = "^0.25.0"
 yoyo-migrations = "^8.2.0"
 psycopg = {extras = ["binary", "pool"], version = "^3.1.16"}
 pydantic-settings = "^2.1.0"
+fastapi-pagination = "^0.12.14"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.0"}
+pydantic = {extras = ["email"], version = "^2.5.3"}
 
 
 [build-system]
