--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -11,3 +11,15 @@ services:
       - POSTGRES_DB=${DATABASE_NAME}
     ports:
       - "2345:5432"
+
+  sonarqube:
+    container_name: "sonarqube"
+    image: "sonarqube:9.9.1-community"
+    volumes:
+      - ./sonarqube/extensions:/opt/sonarqube/extensions
+      - ./sonarqube/logs:/opt/sonarqube/logs
+      - ./sonarqube/data:/opt/sonarqube/data
+    expose:
+      - "9000"
+    ports:
+      - "9000:9000"
