--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,9 @@ fastapi-pagination = "^0.12.14"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.5.0"}
 pydantic = {extras = ["email"], version = "^2.5.3"}
-aio-pika = "^9.3.1"
 loguru = "^0.7.2"
 fastapi-mail = "^1.4.1"
+python-multipart = "^0.0.6"
 
 
 [build-system]
