add change password, delete user, Dockerfile,

--- a/.env.local
+++ b/.env.local
@@ -16,8 +16,10 @@ APP_PORT=8000
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # 90 days
-REFRESH_TOKEN_EXPIRE_MINUTES=129900
+#REFRESH_TOKEN_EXPIRE_MINUTES=129900
+REFRESH_TOKEN_EXPIRE_MINUTES=1
 JWT_ALGORITHM=HS256
+
 ENCRYPT_KEY=TshgGacKPYrm35m89UqbRg46JAbUm2yRtxOCQFdqa3w=
 
 ### mail-sender ###
