--- a/.env.local
+++ b/.env.local
@@ -9,7 +9,7 @@ DATABASE_PORT=2345
 ### FastAPI environment variables ###
 API_TITLE=auth-service dev
 CORS_ORIGINS=["*"]
-APP_PORT=8000
+SERVER_PORT=50052
 
 ### JWT ###
 # 30 min
