--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ loguru = "^0.7.2"
 fastapi-mail = "^1.4.1"
 python-multipart = "^0.0.6"
 prometheus-fastapi-instrumentator = "^6.1.0"
+grpcio = "^1.60.0"
+grpcio-tools = "^1.60.0"
 
 
 [build-system]
