--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,10 @@
 ### PostgreSQL database environment variables ###
-DATABASE_HOST=localhost
+DATABASE_HOST=db
 DATABASE_USER=admin
 DATABASE_PASSWORD=admin
 DATABASE_NAME=auth
-DATABASE_PORT=2345
+DATABASE_PORT=5432
+DB_POOL_SIZE=90
 
 SERVER_PORT=50052
 
