--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -1,6 +1,20 @@
 version: '3'
 
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: on-failure
+    container_name: auth-service
+#    command: bash -c "yoyo init --database postgresql+psycopg://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME} migrations && yoyo develop && python -m app"
+
+    command: bash -c "yoyo develop && python -m app"
+    ports:
+      - "50052:50052"
+    depends_on:
+      - db
+
   db:
     image: postgres:14
     restart: always
