--- a/.env.local
+++ b/.env.local
@@ -1,12 +1,13 @@
 ### PostgreSQL database environment variables ###
-DATABASE_HOST=db
+DATABASE_HOST=localhost
 DATABASE_USER=admin
 DATABASE_PASSWORD=admin
 DATABASE_NAME=auth
-DATABASE_PORT=5432
+DATABASE_PORT=2345
 DB_POOL_SIZE=90
 
 SERVER_PORT=50052
+METRICS_PORT=4322
 
 ### JWT ###
 # 30 min
