--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ python-multipart = "^0.0.6"
 grpcio = "^1.60.0"
 grpcio-tools = "^1.60.0"
 pyjwt = "^2.8.0"
+grpcio-health-checking = "^1.60.1"
+prometheus-client = "^0.19.0"
+py-grpc-prometheus = "^0.7.0"
 
 
 [build-system]
